# flexr-backend

./: .env.example  .gitignore  Dockerfile  README.md  db_config.ini  pyproject.toml  run.sh
api/: api.py  auth.py  crew_handler.py  db_factory.py  dbutil.py  event_models.py  logging_config.py  main.py  models.py  pg_dbutil.py  security.py  task_manager.py
benchmark/: benchmark_questions.py  threshold_analysis.py
documents/sql/: setup_flexr_nova_db.sql  update.sql
src/flexr/: benchmark_questions.py  crew.py
src/flexr/config/: agents.yaml  logging.py  tasks.yaml
src/flexr/crews/qa_crew/: main.py  qa_crew.py
src/flexr/crews/qa_crew/config/: agents.yaml
src/flexr/crews/refine_query_crew/: refine_query_crew.py
src/flexr/crews/refine_query_crew/config/: agents.yaml  tasks.yaml
src/flexr/tools/: .gitignore
src/flexr/utils/: milvus_util.py  models.py  pdf_file_util.py  schemas.py
